
- Added Quests:
	- Blackfathom Deeps: The Rise of Aku'mai
	- Razorfen Downs: Blackthorn's Lieutenants
	- Razorfen Downs: The Ritual
	- Auchindoun: Go Fetch
	- Auchindoun: The Soulcutter
	- Auchindoun: Soulcarver Voss
	- Auchindoun: The Cure For Death
	- Auchindoun: Vessel of Virtue
	- Auchindoun: A Worthy Challenge: Teron'gor
	




Version 4.9.0 (BETA)  (October 25, 2014)

- Compatibility and TOC file updates for Patch 6.0.2
- Removed all Challenge Mode quests (deleted in patch 6.0.2)
- Removed all references to Justice and Valor points.  May they rest in peace.
- Moved Options button a little bit more to the center.
- Warlords of Draenor quests will be added in the next release.  I don't have enough information for them at this time.

- Added quest:  A Brewing Storm: Blanche's Boomer Brew (thanks Guldukat!)



Version 4.8.8b  (April 13, 2014)

- Fixes in deDE localization for End Time and Well of Eternity quests.



Version 4.8.8a  (March 9, 2014)

- Fixes in deDE localization for Auchenai Crypts and Botanica.



Version 4.8.8  (February 25, 2014)

- Fixes in deDE localization.
- Translation files for Simplified Chinese, Traditional Chinese and Russian are no longer being loaded.  They haven't been maintained in over a year.  The files will remain in the release however, in case anyone wishes to use them.
- Fixed a few boring typos.

- Added quests:
	- Upper Blackrock Spire: Blackrock Anomaly   (thanks Guldukat!)
	- Siege of Orgrimmar: A Vision in Time
	- Siege of Orgrimmar: Refining The Vision
	- Siege of Orgrimmar: Seeking Fate
	- Siege of Orgrimmar: Hidden Threads



Version 4.8.7  (November 26, 2013)

- Fixed: Starting location of Stratholme: Liquid Gold  (thanks yunohu)
- Fixed: Starting location of Shattered Halls: Advancing the Campaign (Horde)    (thanks yunohu)
- Added missing optional prequest for Utgarde Keep: Stealing Their Thunder   (thanks yunohu)
- Special thanks to Guldukat for reminding me of these quests I forgot to add.  Thank you!
